--- a/style.css
+++ b/style.css
@@ -4,18 +4,21 @@
   box-sizing: border-box;
 }
 body {
+  background-color: #000000 !important;
+
   width: 100%;
   height: 100vh;
-  /* background-color: #131312; */
-  background-color: rgb(4, 4, 4);
+
+  /* background-color: rgb(4, 4, 4); */
   display: flex;
   align-items: center;
   justify-content: center;
 }
 header {
   width: 85%;
-  height: 98%;
-  border: 1px solid #fff;
+  height: 95%;
+  /* border: 2px solid #fff !important; */
+
   display: flex;
   flex-wrap: wrap;
 }
